# Desktop-Alarm

./: CMakeLists.txt  main.cpp
locale/ar/LC_MESSAGES/: messages.mo  messages.po
